; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/soc/codecs/extr_wm8523.c_wm8523_add_widgets.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/soc/codecs/extr_wm8523.c_wm8523_add_widgets.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_soc_codec = type { i32 }

@wm8523_dapm_widgets = common dso_local global i32 0, align 4
@intercon = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.snd_soc_codec*)* @wm8523_add_widgets to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @wm8523_add_widgets(%struct.snd_soc_codec* %0) #0 {
  %2 = alloca %struct.snd_soc_codec*, align 8
  store %struct.snd_soc_codec* %0, %struct.snd_soc_codec** %2, align 8
  %3 = load %struct.snd_soc_codec*, %struct.snd_soc_codec** %2, align 8
  %4 = load i32, i32* @wm8523_dapm_widgets, align 4
  %5 = load i32, i32* @wm8523_dapm_widgets, align 4
  %6 = call i32 @ARRAY_SIZE(i32 %5)
  %7 = call i32 @snd_soc_dapm_new_controls(%struct.snd_soc_codec* %3, i32 %4, i32 %6)
  %8 = load %struct.snd_soc_codec*, %struct.snd_soc_codec** %2, align 8
  %9 = load i32, i32* @intercon, align 4
  %10 = load i32, i32* @intercon, align 4
  %11 = call i32 @ARRAY_SIZE(i32 %10)
  %12 = call i32 @snd_soc_dapm_add_routes(%struct.snd_soc_codec* %8, i32 %9, i32 %11)
  %13 = load %struct.snd_soc_codec*, %struct.snd_soc_codec** %2, align 8
  %14 = call i32 @snd_soc_dapm_new_widgets(%struct.snd_soc_codec* %13)
  ret i32 0
}

declare dso_local i32 @snd_soc_dapm_new_controls(%struct.snd_soc_codec*, i32, i32) #1

declare dso_local i32 @ARRAY_SIZE(i32) #1

declare dso_local i32 @snd_soc_dapm_add_routes(%struct.snd_soc_codec*, i32, i32) #1

declare dso_local i32 @snd_soc_dapm_new_widgets(%struct.snd_soc_codec*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
